--- a/vote-app-client/package.json
+++ b/vote-app-client/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3"
   },
   "scripts": {
